--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapi-sandbox",
+  "name": "web-audio-api-experience",
   "version": "1.0.0",
   "description": "",
   "source": "src/index.html",
@@ -17,5 +17,8 @@
     "parcel-reporter-static-files-copy": "^1.4.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10"
+  },
+  "dependencies": {
+    "web-audio-oscillators": "^1.0.4"
   }
 }
